--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -7,6 +7,7 @@
     <app-serres
       *ngFor="let serre of serres; let i = index"
       [name]="serre.nom"
+      [id]="serre.id"
       (supprimerSerre)="supprimerSerre(i)">
     </app-serres>
   </div>
