--- a/src/app/components/serres/serres.component.html
+++ b/src/app/components/serres/serres.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-col gap-1 items-center">
-  <div class="w-40 h-20 flex justify-center items-center bg-gray-300 text-black font-semibold rounded-lg shadow-md cursor-pointer hover:bg-gray-400">
+  <div (click)="navigateToSerreDetails()" class="w-40 h-20 flex justify-center items-center bg-gray-300 text-black font-semibold rounded-lg shadow-md cursor-pointer hover:bg-gray-400">
     {{ name }}
   </div>
   <div class="flex justify-center items-center gap-3">
