--- a/src/app/components/capteurs/capteurs.component.html
+++ b/src/app/components/capteurs/capteurs.component.html
@@ -1,5 +1,20 @@
+<!-- capteurs.component.html -->
 <div *ngIf="serreData" class="p-6 bg-white rounded-lg shadow-md">
-  <h2 class="text-2xl font-semibold text-gray-800 mb-4">Serre {{ serreId }}</h2>
+
+  <div class="flex items-center justify-between mb-4 relative">  <!-- Added relative -->
+    <h2 *ngIf="!editingName" class="text-2xl font-semibold text-gray-800 cursor-pointer" (click)="editSerreName()">{{ serreData.name }}</h2>
+    <div *ngIf="editingName" class="flex items-center">
+      <input type="text" [(ngModel)]="serreData.name" class="border rounded px-2 py-1 mr-2">
+      <button (click)="saveSerreName()" class="bg-green-500 hover:bg-green-700 text-white font-bold py-1 px-2 rounded">Save</button>
+      <button (click)="cancelNameEdit()" class="bg-gray-500 hover:bg-gray-700 text-white font-bold py-1 px-2 rounded ml-2">Cancel</button>
+    </div>
+
+    <svg *ngIf="!editingName" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 absolute right-0 top-1/2 transform -translate-y-1/2 text-gray-400 hover:text-gray-600 cursor-pointer" (click)="editSerreName()">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10" />
+    </svg>
+
+
+  </div>
 
   <div class="grid grid-cols-2 gap-4">
     <div>
@@ -17,13 +32,20 @@
     <div>
       <p class="text-gray-600">Water Level:</p>
       <div class="relative pt-1">
-        <div class="overflow-hidden h-2 mb-4 text-xs flex rounded bg-indigo-200">
-          <div style="width:{{ serreData.waterLevel }}%;" class="shadow-none flex flex-col text-center whitespace-nowrap text-white justify-center bg-green-700"></div>
+        <div class="overflow-hidden h-2 mb-4 text-xs flex rounded bg-gray-200">  <!-- Lighter background -->
+          <div [style.width.%]="serreData.waterLevel" class="shadow-none flex flex-col text-center whitespace-nowrap text-white justify-center bg-green-700"></div>
         </div>
       </div>
     </div>
+    <div>
+      <label for="location" class="text-gray-600">Location:</label><br>
+      <input type="text" id="location" [(ngModel)]="serreData.location" class="border rounded px-2 py-1 w-full">
+    </div>
+    <div>
+      <label for="plantType" class="text-gray-600">Plant Type:</label><br>
+      <input type="text" id="plantType" [(ngModel)]="serreData.plantType" class="border rounded px-2 py-1 w-full">
+    </div>
   </div>
-
 </div>
 
 <div *ngIf="!serreData" class="p-6 text-center">
