ajout onglet meteo

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,10 +8,10 @@
 				 routerLinkActive="bg-gray-200">
 				Dashboard
 			</div>
-			<div class="hover:bg-gray-100 rounded cursor-pointer p-3" [routerLink]="['gestion']"
-				 routerLinkActive="bg-gray-200">
-				Gestion
-			</div>
+      <div class="hover:bg-gray-100 rounded cursor-pointer p-3" [routerLink]="['/meteo']"
+           routerLinkActive="bg-gray-200">
+        Météo
+      </div>
 		</div>
 	</div>
 	<div class="p-3 text-xs flex items-center gap-3">
